# odbc-address-verify-and-update

./: .gitignore  Cargo.toml  GitVersion.yaml  GitVersion.yml  README.md
.cargo/: config.toml
.github/workflows/: cicd.yaml  trivy-scan.yml
deployment/base/: deployment.yaml  kustomization.yaml
deployment/overlays/prod/: configMap.yaml  kustomization.yaml
deployment/overlays/stg/: configMap.yaml  kustomization.yaml
src/: error.rs  main.rs
